# kratos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  Pelea de gallos, Round 1..html  README.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
backend/: README.md  pyproject.toml
backend/src/kratos/: __init__.py  config.py  db.py  main.py
backend/src/kratos/api/: admin_audit.py  admin_dashboard.py  admin_participation.py  admin_period.py  admin_proposals.py  auth.py  ballot.py  me.py  period.py  proposals.py  results.py
backend/src/kratos/auth/: deps.py  google.py  session.py
backend/src/kratos/migrations/: 0001_initial.sql  0002_admin_quorum.sql
backend/src/kratos/models/: audit.py  ballot.py  period.py  proposal.py  results.py  schemas.py
backend/src/kratos/seed/: import_csv.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_domain.py
backend/tests/integration/: test_admin_bulk_proposals.py  test_admin_dashboard.py  test_admin_participation.py  test_csv_import.py  test_merge_proposals.py  test_participation_no_score_leak.py  test_period_transitions.py  test_results_ranking.py  test_vote_anonymity.py  test_vote_unicity.py
docs/: Formulario sin título (respuestas) - Respuestas de formulario 1.csv  requisitos.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+100 files in other folders)
