[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kratos"
version = "0.1.0"
description = "Kratos — backend FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "starlette>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "black>=24.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kratos = ["migrations/*.sql", "static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = [
    "E501",  # line-length: black ya lo controla
    "B008",  # falsos positivos sobre el patrón FastAPI `Depends(...)` en defaults
    "RUF001",  # ambigüedad U+00A0/etc en strings es legítima en copys en español
    "RUF002",  # idem en docstrings
    "RUF003",  # idem en comments
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
